# vqllm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
benchmarks/: llama3.py  quantizer_kernel.py
recipes/: eleuther_eval.py  full_finetune_single_device.py  run_vq_model_ablation.sh  run_vq_size_ablation.sh  run_vq_type_ablation.sh
recipes/config/: eleuther_evaluation.yaml  gemma_7b_single_device.yaml  llama3_8b_single_device.yaml  mistral_7b_single_device.yaml
tests/: test_quantizer_ema_type.py  test_quantizer_kernel.py
vqllm/models/: __init__.py  _component_builders.py  _model_builders.py  _modules.py
vqllm/quantizer/: __init__.py  quantize.py  quantize_kernel.py  utils.py
vqllm/utils/: checkpointer.py  data.py  eleuther_eval.py
